# comonads-by-example

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  comonads-by-example.cabal  notes.md  package.yaml  stack.yaml
docs/: 01-streams.md  02-store.md  03-env.md  04-traced.md  05-transformers.md  06-comonad-fix.md  1-overview.md  abstract-comonads.md  bonus-cofree.md  bonus-zippers.md  cofree-graphs.sh  cofree.md  comonad-fix.md  convolution.md  env.md  good-examples.md  graphs.sh  outline.md  proposal.md  store.md  stream-graphs.sh  streams.md  traced.md  transformers.md  zippers.md
docs/1-overview/: 1-overview.md  1-streams.md  1-zippers.md  graphs.sh  outline.md
docs/2-abstract-comonads/: 2-abstract-comonads.md  2-comonad-fix.md  graphs.sh
docs/3-cofree-and-pairing/: 3-cofree-and-pairing.md
docs/4-convolution/: 4-convolution.md
drafts/Dynamic/: Cofree.hs
drafts/Traced/: Newton.hs
drafts/UIPairing/: Pair.hs  View.hs
drafts/Zipper/: Trans.hs
proposal/: proposal.md
src/: ComonadsByExample.hs  Fix.hs
src/Comonads/: CoApply.hs  Cofree.hs  Env.hs  Sheet.hs  SimpleSheet.hs  Store.hs  Stream.hs  Traced.hs  Tree.hs  Zipper.hs
src/Comonads/Cofree/: Adjunction.hs  Examples.hs  FileTree.hs  Newton.hs  TicTacToe.hs  Trans.hs
src/Comonads/Dynamic/: Cofree.hs
src/Comonads/Env/: BankAccount.hs  Clamp.hs  Default.hs  Filter.hs  (+2 more)
src/Function/: Derivative.hs
src/List/: Tetris.hs
src/Store/: Newton.hs
src/Tree/: Data.hs  Data2.hs  Data3.hs
src/UI/: App.hs  View.hs
src/UIPairing/: App.hs  View.hs
src/Zipper/: Data.hs  Watershed.hs
(+40 files in other folders)
